tdf#46062 - Indicate hidden whitespaces using quotes

Indicate hidden whitespaces for the text items in the autofilter dialog
using quotes.

Change-Id: Iabd28ff70a3ecabb1653a3b591d7eb6b24f9fde8